# gpsdistance

./: .gitmodules  CMakeLists.txt
include/: gpsdistance.hpp
src/: gpsdistance.cpp
test/: main.cpp
